Deactivate send bolus button if > maxBolus in bolusview

--- a/LoopFollow/Application/Base.lproj/Main.storyboard
+++ b/LoopFollow/Application/Base.lproj/Main.storyboard
@@ -1307,6 +1307,9 @@
                                                                     </constraints>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                                                    <connections>
+                                                                        <action selector="editingChanged:" destination="gGw-b9-Weh" eventType="editingChanged" id="azT-bV-EwE"/>
+                                                                    </connections>
                                                                 </textField>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="E" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YIt-Qz-s6v">
                                                                     <rect key="frame" x="204" y="4" width="25" height="27"/>
@@ -1417,6 +1420,7 @@
                     <connections>
                         <outlet property="bolusAmount" destination="0HU-rw-87i" id="Cv5-Ig-do0"/>
                         <outlet property="bolusEntryField" destination="0HU-rw-87i" id="E1k-IY-JCh"/>
+                        <outlet property="bolusUnits" destination="0HU-rw-87i" id="qhQ-qs-fhA"/>
                         <outlet property="sendBolusButton" destination="omd-J4-dQH" id="3nr-GO-3lG"/>
                     </connections>
                 </viewController>
