--- a/LoopFollow/Application/Base.lproj/Main.storyboard
+++ b/LoopFollow/Application/Base.lproj/Main.storyboard
@@ -1097,7 +1097,7 @@
                                                     </subviews>
                                                 </stackView>
                                             </subviews>
-                                            <color key="backgroundColor" red="0.29302916167372772" green="0.60303507863148931" blue="1" alpha="0.3980235927152318" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <color key="backgroundColor" name="Basal"/>
                                             <constraints>
                                                 <constraint firstAttribute="trailingMargin" secondItem="FKe-UD-Eyg" secondAttribute="trailing" constant="4" id="Diw-oK-pEu"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="FKe-UD-Eyg" secondAttribute="bottom" constant="4" id="GrH-AM-PdS"/>
@@ -1153,7 +1153,7 @@
                                                 <constraints>
                                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="25" id="5W6-UB-3Ty"/>
                                                 </constraints>
-                                                <color key="textColor" systemColor="placeholderTextColor"/>
+                                                <color key="textColor" name="Basal"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
@@ -1162,7 +1162,7 @@
                                                 <accessibility key="accessibilityConfiguration">
                                                     <accessibilityTraits key="traits" notEnabled="YES"/>
                                                 </accessibility>
-                                                <color key="textColor" systemColor="placeholderTextColor"/>
+                                                <color key="textColor" name="Basal"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
@@ -1171,7 +1171,7 @@
                                                 <accessibility key="accessibilityConfiguration">
                                                     <accessibilityTraits key="traits" notEnabled="YES"/>
                                                 </accessibility>
-                                                <color key="textColor" systemColor="placeholderTextColor"/>
+                                                <color key="textColor" name="Basal"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
@@ -1191,7 +1191,7 @@
                                                 <accessibility key="accessibilityConfiguration">
                                                     <accessibilityTraits key="traits" notEnabled="YES"/>
                                                 </accessibility>
-                                                <color key="textColor" systemColor="placeholderTextColor"/>
+                                                <color key="textColor" name="Basal"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
@@ -1327,7 +1327,7 @@
                                                     </subviews>
                                                 </stackView>
                                             </subviews>
-                                            <color key="backgroundColor" red="0.29302916169999998" green="0.60303507860000005" blue="1" alpha="0.39802359269999998" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <color key="backgroundColor" systemColor="systemGray4Color"/>
                                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstItem="As3-ZU-TLX" firstAttribute="leading" secondItem="hbT-CS-rnz" secondAttribute="leadingMargin" constant="4" id="7ye-eT-OiK"/>
@@ -1769,6 +1769,9 @@
         <image name="target" catalog="system" width="128" height="123"/>
         <image name="wand.and.stars" catalog="system" width="128" height="115"/>
         <image name="zzz" catalog="system" width="119" height="128"/>
+        <namedColor name="Basal">
+            <color red="0.11800000071525574" green="0.58799999952316284" blue="0.98799997568130493" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="Insulin">
             <color red="0.11800000071525574" green="0.58799999952316284" blue="0.98799997568130493" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
@@ -1783,9 +1786,6 @@
         </namedColor>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="placeholderTextColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29803921568627451" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="secondarySystemBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
