Improved UI/UX for send buttons and error alerts (+ draft for new sms formatting) - Disable send buttons when maxCarbs, maxFatProtein or maxBolus is exceeded - Always disable send button after enacting it, and always activate the button again to be able to adjust entries and try again if the process is stopped due to any error or choosing cancel in confirmation any dialog - Present the actual guardrail setting on the disabled send button to make it easy to see what entry to adjust - Present alerts if carbs, fat, protein or bolus entries are misformatted - Add system sounds/vibrations for successfully delivered messages and all errors - Reformatting of the sms strings sent (see screenshots in PR)

--- a/LoopFollow/Application/Base.lproj/Main.storyboard
+++ b/LoopFollow/Application/Base.lproj/Main.storyboard
@@ -1246,6 +1246,9 @@
                                                                     <color key="tintColor" systemColor="labelColor"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                                                    <connections>
+                                                                        <action selector="editingChanged:" destination="gGw-b9-Weh" eventType="editingChanged" id="d3e-8U-GuT"/>
+                                                                    </connections>
                                                                 </textField>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="U" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YIt-Qz-s6v">
                                                                     <rect key="frame" x="214" y="4" width="25" height="27"/>
@@ -1360,6 +1363,7 @@
                     <connections>
                         <outlet property="bolusAmount" destination="0HU-rw-87i" id="Cv5-Ig-do0"/>
                         <outlet property="bolusEntryField" destination="0HU-rw-87i" id="6h7-GW-ktK"/>
+                        <outlet property="bolusUnits" destination="0HU-rw-87i" id="f15-Va-xuC"/>
                         <outlet property="sendBolusButton" destination="omd-J4-dQH" id="PCD-uC-2iY"/>
                     </connections>
                 </viewController>
